--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ var gform;gform||(document.addEventListener("gform_main_scripts_loaded",function
                 j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
             j.async = true;
             j.src =
-                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+                '' + i + dl;
             f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-NH8SS69');</script>
     <!-- End Google Tag Manager -->
@@ -39,7 +39,7 @@ var gform;gform||(document.addEventListener("gform_main_scripts_loaded",function
 	<!-- This site is optimized with the Yoast SEO Premium plugin v19.4 (Yoast SEO v20.2) - https://yoast.com/wordpress/plugins/seo/ -->
 	<title>Sauls Landscaping</title>
 	<meta name="description" content="Landscape Solutions &amp; Design has great ideas to help with your residential landscaping and hardscaping needs. We serve multiple areas in NC!" />
-	<link rel="canonical" href="https://triadlandscapingservices.com/residential-landscaping/" />
+	<link rel="canonical" href="https://sa-khaki.vercel.app/" />
 	<meta property="og:locale" content="en_US" />
 	<meta property="og:type" content="article" />
 	<meta property="og:title" content="Residential Landscaping" />
