--- a/index.html
+++ b/index.html
@@ -450,6 +450,9 @@ gform.initializeOnLoaded( function() {gformInitSpinner( 7, 'https://triadlandsca
     <main class="main_content">
         <div class="container">
                             <h2 class="title-h2">Meet the Owner, Saul</h2>
+		<div class="col-12 col-md-3 col flex-order-img">
+                                            <img src="https://raw.githubusercontent.com/fruitbox12/sa/main/unnamed.jpg">
+                                    </div>
                     </div>
         <div class="container">
             <div class="row mobile-order">
