--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ gform.initializeOnLoaded( function() {gformInitSpinner( 7, 'https://triadlandsca
         <div class="container">
             <div class="row mobile-order">
                 <div class="col-12 col-md-9 col">
-                                            <p>Hello, my name is Saul owner and founder of Saul Landscaping &amp; Design inc.&nbsp; And here is my story of why I do what I do.</p>
+                                            <p>Hello, my name is Saul owner and founder of Saul Landscaping &amp; Design inc.&nbsp; And here is my story of why I do what I do. I have been helping home owners for decades and closely evaluate what they need to create a tailored solution for their home landscapes.</p>
 <p>.</p>
 <p></p>
                                     </div>
@@ -466,7 +466,7 @@ gform.initializeOnLoaded( function() {gformInitSpinner( 7, 'https://triadlandsca
             </div>
         </div>
         <div class="container text-center">
-                            <a aria-label="Read more" class="btn-small main_content-link" href="https://sa-khaki.vercel.app/">Read More</a>
+                            <a aria-label="Read more" class="btn-small main_content-link" href="https://sauls-landscaping.vercel.app/meet.html">Read More</a>
                     </div>
     </main>
     <!-- END of main content -->
@@ -596,7 +596,6 @@ gform.initializeOnLoaded( function() {gformInitSpinner( 9, 'https://triadlandsca
             </div>
                 
                 <div class="gallery-our_work-link_wrap">
-        	<a class="btn-small" href="https://triadlandscapingservices.com/project-gallery/">View Full Gallery</a>
         </div>
             </div>
 </section>
